feature: Start rebuilding crafting system manager app with svelte
- adds back in create/delete functionality

--- a/src/public/templates/partials/readonly-crafting-system.hbs
+++ b/src/public/templates/partials/readonly-crafting-system.hbs
@@ -5,7 +5,7 @@
     <hr/>
     <p>{{system.description}}</p>
     <hr/>
-    <p class="fabricate-locked"><i class="fa-solid fa-lock"></i> {{localize "fabricate.CraftingSystemManagerApp.editor.locked"}}</p>
+    <p class="fabricate-locked"><i class="fa-solid fa-lock"></i> {{localize "fabricate.CraftingSystemManagerApp.editor.isLocked"}}</p>
 </header>
 
 <hr/>
