feature: Start rebuilding crafting system manager app with svelte
- reimplements all context menu and left nav functions in Svelte

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -108,6 +108,11 @@ BEGIN FABRICATE THEME STYLES
           }
         }
       }
+      a {
+        &:hover {
+          text-shadow: none;
+        }
+      }
       .fab-button {
         cursor: pointer;
         i.fa-circle-exclamation {
