--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -19,6 +19,7 @@ BEGIN CSS VARIABLES
   --color-background-dark-2: #3e3a37;
   --color-background-dark-3: #37353a;
   --color-background-dark-4: #2c2b2e;
+  --color-background-dark-5: #242326;
   --color-btn-darkbg-inactive: #b2aaa5;
   --color-btn-darkbg-active: #decfee;
   --color-btn-ctx-menu-inactive: #86725b;
@@ -41,7 +42,7 @@ BEGIN FABRICATE THEME STYLES
 .fab-application-window.fab-fabricate-theme {
 
   .window-content {
-    background: #2c2a2e;
+    background: var(--color-background-dark-1);
     padding: 0;
     color: var(--color-text-light-primary);
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -179,6 +180,19 @@ BEGIN FABRICATE THEME STYLES
         }
       }
     }
+
+    .fab-tabs {
+      .fab-tab-content {
+        .fab-tab-header {
+          color: var(--color-text-light-secondary);
+          background: var(--color-background-dark-5);
+        }
+        .fab-editable {
+          background: var(--color-background-dark-3);
+          border-radius: 4px;
+        }
+      }
+    }
   }
 
 }
@@ -279,6 +293,27 @@ BEGIN COMMON STRUCTURAL STYLES
   }
 }
 
+.fab-columns {
+  display: flex;
+  flex-wrap: nowrap;
+  .fab-column {
+    flex: 1;
+    flex-direction: column;
+    display: inline-flex;
+    &.fab-align-right {
+      flex-direction: row-reverse;
+    }
+    &.fab-align-left {
+      flex-direction: row;
+    }
+  }
+  .fab-row {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+  }
+}
+
 .fab-crafting-system {
   flex-grow: 1;
   display: flex;
@@ -302,10 +337,60 @@ BEGIN COMMON STRUCTURAL STYLES
     .fab-tab-content {
       flex-grow: 1;
       display: flex;
+      > div {
+        display: flex;
+        width: 100%;
+      }
+      .fab-tab-header {
+        height: 46px;
+        margin: 8px 0;
+        padding: 4px 12px;
+        align-items: center;
+        h2 {
+          margin: 0;
+          font-size: var(--font-size-18);
+        }
+      }
+      .fab-system-details {
+        padding: 0 12px;
+        .fab-label {
+          font-weight: bold;
+        }
+        .fab-label.fab-inline {
+          margin-right: 10px;
+          width: 50px;
+        }
+        .fab-editable {
+          padding: 5px 7px;
+        }
+        .fab-editable.fab-inline, .fab-locked.fab-inline {
+          width: 250px;
+          margin-right: 10px;
+        }
+        .fab-textbox {
+          width: 100%;
+          margin: 12px 0;
+        }
+        .fab-editable.fab-textbox {
+          min-height: 120px;
+        }
+        .fab-system-author, .fab-system-name {
+          margin: 5px 0 10px 0;
+        }
+        .fab-system-summary {
+          .fab-editable.fab-textbox {
+            min-height: 60px;
+          }
+        }
+        .fab-locked.fab-textbox{
+          min-height: 30px;
+        }
+      }
     }
   }
 }
 
+/*
 .fabricate-component-list(@tile-size, @info-size) {
   display: flex;
   flex-wrap: wrap;
@@ -424,27 +509,7 @@ BEGIN COMMON STRUCTURAL STYLES
     display: inline-flex;
   }
 }
-
-.fabricate-columns {
-  display: flex;
-  flex-wrap: nowrap;
-  .fabricate-column {
-    flex: 1;
-    flex-direction: column;
-    display: inline-flex;
-    &.fabricate-align-right {
-      flex-direction: row-reverse;
-    }
-    &.fabricate-align-left {
-      flex-direction: row;
-    }
-  }
-  .fabricate-row {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-  }
-}
+*/
 
 /*
 =====================================================================
