feature: Start rebuilding crafting system manager app with svelte
- implements nav bar scrolling

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -266,14 +266,14 @@ BEGIN COMMON STRUCTURAL STYLES
   .fab-items {
     flex-grow: 1;
     width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
     .fab-nav-item {
       .fab-button {
         display: flex;
         flex-wrap: nowrap;
         align-items: center;
         width: 100%;
-        height: 50px;
+        min-height: 50px;
         padding-left: 10px;
         p {
           flex-grow: 1;
