feature: Start rebuilding crafting system manager app with svelte
- opens the item sheet when you click the component image

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -392,6 +392,7 @@ BEGIN COMMON STRUCTURAL STYLES
     }
     .fab-component-image {
       flex-grow: 2;
+      cursor: pointer;
     }
     .fab-enable-component {
       margin: 4px 10px 4px 10px;
