--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -220,8 +220,35 @@ BEGIN FABRICATE THEME STYLES
   .fab-component-grid {
     .fab-component {
       background: var(--color-background-dark-3);
+      &.fab-error {
+        .fab-component-name {
+          color: var(--error);
+        }
+      }
       .fab-component-name {
+        position: relative;
+        z-index: 1;
         background: var(--color-background-dark-5);
+        i.fa-circle-exclamation {
+          color: var(--error);
+          position: absolute;
+          top: 1px;
+          font-size: var(--font-size-20);
+          right: -9px;
+          top: -9px;
+          &::after {
+            border-radius: 50%;
+            content: "";
+            background: #dbd4e5;
+            display: flex;
+            height: 16px;
+            width: 16px;
+            right: 2px;
+            top: 2px;
+            position: absolute;
+            z-index: -1;
+          }
+        }
       }
     }
   }
@@ -374,7 +401,7 @@ BEGIN COMMON STRUCTURAL STYLES
   .fab-component {
     display: inline-flex;
     flex-wrap: wrap;
-    &.disabled {
+    &.fab-disabled {
       opacity: 0.4;
       .fab-component-name {
         text-decoration: line-through;
