--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -270,6 +270,10 @@ BEGIN FABRICATE THEME STYLES
   }
 
   .fab-essence-editor {
+    .fab-essence-icon-modal {
+      background: var(--color-background-dark-5);
+      border: 1px solid var(--color-border-dark-2);
+    }
     button.fab-new-essence {
       background: var(--color-background-dark-2);
     }
@@ -671,6 +675,39 @@ div.fab-editable {
 }
 
 .fab-essence-editor {
+  .fab-essence-icon-modal {
+    position: absolute;
+    top: 0;
+    left: 70px;
+    z-index: 1;
+    border-radius: 5px;
+    padding: 8px;
+    .fab-essence-icon-opts {
+      max-height: 200px;
+      width: 180px;
+      display: grid;
+      grid-template-columns: repeat(7, 1fr);
+      row-gap: 0.5em;
+      column-gap: 0.5em;
+      padding: 0 6px 0 0;
+      margin-top: 6px;
+      button {
+        padding: 0;
+        max-width: 14px;
+      }
+    }
+  }
+  .fab-essence-ae-source-add {
+    width: 80%;
+    margin-right: 10px;
+    padding: 10px;
+    justify-content: center;
+    display: flex;
+  }
+  img.fab-essence-ae-source-img {
+    max-width: 48px;
+    max-height: 48px;
+  }
   .fab-no-essences {
     display: flex;
     width: 100%;
@@ -687,6 +724,7 @@ div.fab-editable {
     padding-bottom: 1em;
     grid-template-columns: 2fr 1fr 2fr;
     row-gap: 1em;
+    margin-top: 20px;
   }
   .fab-essence-icon {
     button.fab-essence-icon-btn {
@@ -739,7 +777,7 @@ div.fab-editable {
     margin-right: 10px;
   }
   button.fab-new-essence {
-    margin: 10px 0 20px 0;
+    margin: 10px 0 0 0;
   }
   .fab-grid-spacer {
     &:last-child {
