feature: Rebuild crafting system manager app with svelte
- enables broken components to be fixed by swapping out the item associated with them

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -297,7 +297,7 @@ BEGIN COMMON STRUCTURAL STYLES
 */
 
 .fab-application-window {
-  .loading-inner {
+  .fab-loading-inner {
     position: absolute;
     margin-left: -40px;
     margin-top: -41px;
@@ -305,7 +305,7 @@ BEGIN COMMON STRUCTURAL STYLES
     left: 50%;
   }
 
-  .loading {
+  .fab-loading {
     position: absolute;
     top: 0;
     left: 0;
@@ -789,6 +789,16 @@ div.fab-editable {
     grid-column: 1 / 5;
   }
 
+
+}
+
+.fab-component-editor {
+  .fab-component-name {
+    flex-grow: 1;
+  }
+  .fab-swap-item {
+    padding: 16px 8px;
+  }
 }
 
 /*
