feature: Rebuild crafting system manager app with svelte
- highlights components with errors

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -280,6 +280,15 @@ BEGIN FABRICATE THEME STYLES
     button.fab-delete-essence {
       background: var(--color-background-dark-5);
     }
+    .fab-grid-spacer {
+      background: var(--color-background-dark-2);
+    }
+  }
+
+  .fab-error {
+    h2 {
+      color: var(--error);
+    }
   }
 
 }
@@ -785,11 +794,8 @@ div.fab-editable {
     }
     margin: 15px 0;
     height: 2px;
-    background: var(--color-background-dark-2);
     grid-column: 1 / 5;
   }
-
-
 }
 
 .fab-component-editor {
