feature: Rebuild crafting system manager app with svelte
- styling fixes

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -498,6 +498,7 @@ BEGIN COMMON STRUCTURAL STYLES
   .fab-row {
     display: flex;
     flex-direction: row;
+    align-items: center;
   }
 }
 
@@ -812,6 +813,9 @@ div.fab-editable {
 }
 
 .fab-component-editor {
+  .fab-salvage-opts {
+    height: 100%;
+  }
   .fab-component-name {
     flex-grow: 1;
   }
