feature: Rebuild crafting system manager app with svelte
- adds component browser clear search button

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -830,6 +830,7 @@ button.clear-search {
     align-items: center;
     width: 100%;
     min-height: 100px;
+    font-style: italic;
   }
   .fab-salvage-opts {
     height: 100%;
