feature: Rebuild crafting system manager app with svelte
- css fixes

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -613,7 +613,6 @@ BEGIN COMMON STRUCTURAL STYLES
   > .fab-tab-content {
     padding: 0 12px;
     .fab-tab-header {
-      min-height: 46px;
       margin: 8px 0;
       padding: 8px 12px;
       img {
@@ -885,6 +884,7 @@ button.clear-search {
     grid-row-gap: 1em;
     grid-column-gap: 1em;
     padding: 8px;
+    margin-bottom: 10px;
     .fab-no-essence-opts {
       min-width: 460px;
       min-height: 52px;
@@ -912,6 +912,11 @@ button.clear-search {
           margin: 0 8px 0 8px;
         }
       }
+    }
+  }
+  .fab-component-salvage, .fab-salvage-options {
+    h3 {
+      margin: 10px 0 15px 0;
     }
   }
   .fab-salvage-source {
